[workspace]
members = [
  "crates/runtime",
  "crates/serverless",
  "crates/cli",
  "crates/wpt-runner",
]

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev.package.num-bigint-dig]
opt-level = 3

[profile.bench.package.flate2]
opt-level = 3

[profile.release.package.flate2]
opt-level = 3
