[package]
name = "lagon-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
lagon-runtime = { path = "../runtime" }
lagon-runtime-http = { path = "../runtime_http" }
lagon-runtime-isolate = { path = "../runtime_isolate" }
lagon-runtime-utils = { path = "../runtime_utils" }
clap = { version = "4.3.4", features = ["derive"] }
dialoguer = { version = "0.10.4", features = ["password"] }
indicatif = "0.17.5"
dirs = "5.0.1"
webbrowser = "0.8.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
hyper = { version = "0.14.26", features = ["server", "http1", "runtime", "stream"] }
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3.3"
pathdiff = "0.2.1"
flume = "0.10.14"
chrono = "0.4.26"
notify = "6.0.1"
envfile = "0.2.1"
anyhow = "1.0.71"
urlencoding = "2.1.2"
