[package]
name = "lagon-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
v8 = "0.66.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "time", "macros"] }
flume = "0.10.14"
httptest = "0.15.4"
lagon-runtime-http = { path = "../runtime_http" }
lagon-runtime-isolate = { path = "../runtime_isolate" }
log = { version = "0.4.17", features = ["std", "kv_unstable", "kv_unstable_serde"] }
serial_test = "1.0.0"

[features]
default = []
ignore-snapshot = ["lagon-runtime-isolate/ignore-snapshot"]
