[package]
name = "lagon-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
v8 = "0.71.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "time", "macros"] }
flume = "0.10.14"
httptest = "0.15.4"
lagon-runtime-http = { path = "../runtime_http" }
lagon-runtime-isolate = { path = "../runtime_isolate" }
lagon-runtime-websocket = { path = "../runtime_websocket" }
log = { version = "0.4.17", features = ["std", "kv_unstable", "kv_unstable_serde"] }
serial_test = "2.0.0"
hyper = { version = "0.14.26", features = [] }
futures-channel = "0.3.28"

[features]
default = []
ignore-snapshot = ["lagon-runtime-isolate/ignore-snapshot"]
