[package]
name = "lagon-runtime-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
v8 = "0.66.0"
anyhow = "1.0.70"
rand = "0.8.5"
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
lagon-runtime-v8-utils = { path = "../runtime_v8_utils" }
# Crypto
hmac = "0.12.1"
sha1 = "0.10.5"
sha2 = "0.10.6"
aes = "0.8.2"
aes-gcm = "0.10.1"
