[package]
name = "lagon-runtime-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
v8 = "0.71.1"
anyhow = "1.0.71"
rand = "0.8.5"
uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }
lagon-runtime-v8-utils = { path = "../runtime_v8_utils" }
# Crypto
hmac = "0.12.1"
sha1 = "0.10.5"
sha2 = "0.10.6"
aes = "0.8.2"
aes-gcm = "0.10.1"
cbc = { version = "0.1.2", features = ["std"] }
ring = { version = "0.16.20", features = ["std"] }
once_cell = "1.17.1"
num-traits = "0.2.15"
rsa = { version = "=0.9.2", default-features = false, features = ["std", "sha2"] }
p256 = { version = "0.13.2", features = ["ecdh"] }
p384 = "0.13.0"
ctr = "0.9.1"
