[package]
name = "lagon-runtime-isolate"
version = "0.1.0"
edition = "2021"

[dependencies]
v8 = "0.73.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3.28"
hyper = { version = "0.14.26", features = ["client"] }
hyper-tls = { version = "0.5.0", features = ["vendored"] }
flume = "0.10.14"
anyhow = "1.0.71"
log = { version = "0.4.18", features = ["std", "kv_unstable"] }
once_cell = "1.17.2"
async-recursion = "1.0.4"
linked-hash-map = "0.5.6"
lagon-runtime-v8-utils = { path = "../runtime_v8_utils" }
lagon-runtime-http = { path = "../runtime_http" }
lagon-runtime-crypto = { path = "../runtime_crypto" }

[features]
default = []
ignore-snapshot = []
