[package]
name = "lagon-runtime-isolate"
version = "0.1.0"
edition = "2021"

[dependencies]
v8 = "0.73.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3.28"
hyper = { version = "0.14.26", features = ["client"] }
flume = "0.10.14"
anyhow = "1.0.71"
log = { version = "0.4.19", features = ["std", "kv_unstable"] }
linked-hash-map = "0.5.6"
flate2 = "1.0.26"
serde_v8 = "0.100.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.3.3", features = ["v4"] }
lagon-runtime-v8-utils = { path = "../runtime_v8_utils" }
lagon-runtime-http = { path = "../runtime_http" }
lagon-runtime-crypto = { path = "../runtime_crypto" }
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"] }

[features]
default = []
ignore-snapshot = []

[profile.bench.package.flate2]
opt-level = 3

[profile.release.package.flate2]
opt-level = 3
