[package]
name = "lagon-runtime-isolate"
version = "0.1.0"
edition = "2021"

[dependencies]
v8 = "0.73.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3.28"
hyper = { version = "0.14.27", features = ["client"] }
flume = "0.10.14"
anyhow = "1.0.71"
log = { version = "0.4.19", features = ["std", "kv_unstable"] }
linked-hash-map = "0.5.6"
flate2 = "1.0.26"
uuid = { version = "1.3.4", features = ["v4", "fast-rng"] }
lagon-runtime-v8-utils = { path = "../runtime_v8_utils" }
lagon-runtime-http = { path = "../runtime_http" }
lagon-runtime-crypto = { path = "../runtime_crypto" }
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"] }

[features]
default = []
ignore-snapshot = []
