[package]
name = "lagon-runtime-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
lagon-runtime-http = { path = "../runtime_http" }
hyper = { version = "0.14", features = ["stream"] }
flume = "0.10.14"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }

[features]
default = []
test = []
