[package]
name = "lagon-runtime-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
lagon-runtime-http = { path = "../runtime_http" }
hyper = { version = "1.0.0-rc.3", features = [] }
http-body-util = "0.1.0-rc.2"
flume = "0.10.14"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }

[features]
default = []
test = []
