[package]
name = "lagon-runtime-websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
v8 = "0.71.2"
http = "0.2.6"
hyper = "0.14.26"
anyhow = "1.0.71"
uuid = { version = "1.3.3", features = ["v4"] }
url = "2.3.1"
tokio = { version = "1.21", features = ["full"] }
tokio-rustls = "0.23.3"
tokio-tungstenite = { version = "0.16.1", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.20.5", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6.2"
rustls-pemfile = "1.0.0"
futures = "0.3.21"
webpki = "0.22"
webpki-roots = "0.22"
lagon-runtime-v8-utils = { path = "../runtime_v8_utils" }
