[package]
name = "lagon-serverless"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14.26", features = ["server", "http1", "runtime", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }
tokio-util = { version = "0.7.8", features = ["rt"] }
lagon-runtime = { path = "../runtime" }
lagon-runtime-http = { path = "../runtime_http" }
lagon-runtime-isolate = { path = "../runtime_isolate" }
lagon-runtime-utils = { path = "../runtime_utils" }
lagon-serverless-logger = { path = "../serverless_logger" }
lagon-serverless-downloader = { path = "../serverless_downloader" }
lagon-serverless-pubsub = { path = "../serverless_pubsub" }
flume = "0.10.14"
mysql = "24.0.0"
dotenv = "0.15.0"
serde_json = "1.0"
metrics = "0.21.0"
metrics-exporter-prometheus = { version = "0.12.1", default-features = false, features = ["http-listener"] }
log = { version = "0.4.18", features = ["std", "kv_unstable", "kv_unstable_serde"] }
once_cell = "1.17.2"
anyhow = "1.0.71"
tokio-cron-scheduler = "0.9.4"
dashmap = "5.4.0"
futures = "0.3.28"
clickhouse = "0.11.4"
bytes = "1.4.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
lagon-runtime = { path = "../runtime" }
lagon-runtime-isolate = { path = "../runtime_isolate" }
flume = "0.10.14"

[dev-dependencies]
reqwest = "0.11.18"
serial_test = "2.0.0"
clickhouse = { version = "0.11.4", features = ["test-util"] }

[features]
default = []
test = ["lagon-runtime-utils/test"]
