[package]
name = "lagon-serverless-pubsub"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-stream = "0.3.5"
futures = "0.3.28"
redis = { version = "0.23.0", default-features = false, features = ["tls-rustls"] }
log = { version = "0.4.18", features = ["std", "kv_unstable", "kv_unstable_serde"] }
flume = "0.10.14"
