[package]
name = "lagon-wpt-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
lagon-runtime = { path = "../runtime" }
lagon-runtime-http = { path = "../runtime_http" }
lagon-runtime-isolate = { path = "../runtime_isolate" }
flume = "0.10.14"
console = "0.15.7"
once_cell = "1.17.1"
hyper = { version = "0.14.26", features = ["server"] }
